@@ -10,10 +10,12 @@ class Way;
 
 class QPainter;
 class QPainterPath;
+class QPolygonF;
 class QPen;
 
 void buildPathFromRoad(Road *R, Projection const &theProjection, QPainterPath &Path);
 void buildPathFromRelation(Relation *R, Projection const &theProjection, QPainterPath &Path);
+void buildPolygonFromRoad(Road *R, Projection const &theProjection, QPolygonF &Polygon);
 
 /// draws way with oneway markers
 void draw(QPainter& thePainter, QPen& thePen, MapFeature::TrafficDirectionType Dir, const QPointF& FromF, const QPointF& ToF, double theWidth, const Projection& theProjection);
